--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!Doctype html>
 <html>
 	<head>
-		<title>SliderJs</title>
-		<link rel="stylesheet" type="text/css" href="css/style.css"/>
+		<title>SlideJs</title>
+		<link rel="stylesheet" type="text/css" href="css/slidejs.css"/>
 	</head>
 	<body>
 		<section>
 			<div class="container">
-				<div class="slider_js">
+				<div id="slide">
 					<ul>
 						<li><img src="images/1.jpg"</li>
 						<li><img src="images/2.jpg"</li>
@@ -18,9 +18,9 @@
 			</div>
 		</section>
 		<script src="js/jquery.min.js"></script>
-		<script src="js/slider_js.js"></script>
+		<script src="js/slidejs.js"></script>
 		<script>
-			$(".slider_js").slider_js();
+			$(".slidejs").slidejs();
 		</script>
 	</body>
 </html>
