--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<script src="js/jquery.min.js"></script>
 		<script src="js/slidejs.js"></script>
 		<script>
-			$("#slide").slidejs();
+			$("#slide").slidejs({ effect : "swing" });
 		</script>
 	</body>
 </html>
