--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!Doctype html>
 <html>
 	<head>
-		<title>SliderJs</title>
+		<title>SlideJs - slider jquery Plugin</title>
 		<link rel="stylesheet" type="text/css" href="css/slidejs.css"/>
 	</head>
 	<body>
