--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!Doctype html>
 <html>
 	<head>
-		<title>SlideJs - jQuery plugin</title>
+		<title>SlideJs - slider jquery Plugin</title>
 		<link rel="stylesheet" type="text/css" href="css/slidejs.css"/>
 	</head>
 	<body>
@@ -20,7 +20,7 @@
 		<script src="js/jquery.min.js"></script>
 		<script src="js/slidejs.js"></script>
 		<script>
-			$("#slide").slidejs();
+			$("#slide").slidejs({ effect : "swing" });
 		</script>
 	</body>
 </html>
