--- a/index.html
+++ b/index.html
@@ -9,10 +9,14 @@
 			<div class="container">
 				<div id="slide">
 					<ul>
-						<li><img src="images/1.jpg"></li>
-						<li><img src="images/2.jpg"></li>
-						<li><img src="images/3.jpg"></li>
-						<li><img src="images/4.jpg"></li>
+						<li><img src="images/image-slider-1.jpg"></li>
+						<li><img src="images/image-slider-2.jpg"></li>
+                                                <li><img src="images/image-slider-3.jpg"></li>
+                                                <li><img src="images/image-slider-4.jpg"></li>
+                                                <li><img src="images/image-slider-5.jpg"></li>
+                                                <li><img src="images/image-slider-6.png"></li>
+                                                <li><img src="images/image-slider-7.jpg"></li>
+                                                <li><img src="images/image-slider-8.jpg"></li>
 					</ul>
 				</div>
 			</div>
