--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<section>
 			<div class="container">
                             <h1 class="top_ele">Slidejs - free slider jquery plugin</h1>
-                            <a href="https://github.com/senthilraj/slidejs">Download</a>
+                            <a href="https://github.com/senthilraj/slidejs">Download - How to use</a>
                             <h1>Swing slide - effect : "swing"</h1>
 				<div id="slide">
 					<ul>
